src/app/unit/unit.component.sass
@use '~src/app/targetable'

:host
  display: flex
  flex-direction: column
  margin: 5px
  padding: 10px
  width: 9vw
  word-break: break-word

:host(.attacking)
  background-color: #FFEBEE

:host(.defending)
  background-color: #E8F5E9

.header
  display: flex
  margin-bottom: 5px

.name
  flex: 1

.stats
  display: flex
  margin-bottom: 5px

.strength
  color: red
  margin-right: 5px

.defense
  margin-right: 5px
  flex: 1

.attribute
  color: red
  margin-right: 5px

.description
  margin-bottom: 5px

